# llvm-project-jev-embedded

./: .gitmodules
clang/lib/Driver/ToolChains/: BareMetal.cpp  BareMetal.h
compiler-rt/cmake/Modules/: AddCompilerRT.cmake
compiler-rt/lib/crt/: CMakeLists.txt
jev-embedded-customs/: CMakeLists.txt  EmbeddedCustoms.cpp  notes.txt
libcxx/: CMakeLists.txt
libcxx/include/: __bsd_locale_fallbacks.h  __config_site.in  __mbstate_t.h  cmath  cwchar  math.h  new
libcxx/include/__support/newlib/: xlocale.h
libcxx/include/__support/xlocale/: __nop_locale_mgmt.h  __posix_l_fallback.h  __strtonum_fallback.h
libunwind/src/: config.h
lld/ELF/: CMakeLists.txt  Config.h  Driver.cpp  LTO.cpp  Options.td
llvm/: CMakeLists.txt
llvm/include/llvm/Bitcode/: BitcodeWriterPass.h
llvm/include/llvm/LTO/: Config.h
llvm/lib/Bitcode/Writer/: BitcodeWriterPass.cpp
llvm/lib/LTO/: LTOBackend.cpp
llvm/lib/Passes/: PassBuilder.cpp  PassRegistry.def
llvm/lib/Support/: CommandLine.cpp
llvm/projects/: CMakeLists.txt
